test/error/LexLiteralOctal.ci
public static class Test
{
	public static bool Run()
	{
		int a = 011; // ERROR: Octal numbers not supported
		return true;
	}
}
